# zig_ls_rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
